add Tailwind and media files

--- a/src/components/Card.astro
+++ b/src/components/Card.astro
@@ -8,7 +8,7 @@ export interface Props {
 const { href, title, body } = Astro.props;
 ---
 
-<li class="bg-lime-400 border-orange-500 p-4 m-4 bottom-4">
+<li class="bg-lime-400 border-orange-500 p-4 m-4 bottom-4 w-96">
 	<a href={href}>
 		<h2 >
 			{title}
