--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,53 +1,26 @@
 ---
+import Header from "../components/Navbar.astro";
 import Layout from "../layouts/Layout.astro";
-import Card from "../components/Card.astro";
-import NavItem from "../components/NavItem.astro";
-import AltBtn from "../components/AltBtn.astro";
 ---
 
 <Layout title="First Tailwind ">
-	<main>
-		<div class="mx-auto">
-			<nav class="bg-gray-800 flex justify-between lg:justify-start items-center">
-				<div class="Logo p-2 w-1/6">
-					<img src="img/logo.png" width="100" alt="" />
-				</div>
-				<!--TODO: Large Menu -->
-				<div class="links lg:block hidden w-1/6 lg:w-4/6">
-					<ul class="menu flex items-center justify-center gap-5">
-						<NavItem text="Home"></NavItem>
-						<NavItem text="Play Together"></NavItem>
-						<NavItem text="Explore"></NavItem>
-						<AltBtn text="Bowser Fury"></AltBtn>
-						<li class="block text-white font-bold rounded-full bg-red-600 p-3 hover:bg-white hover:text-black transition duration-500">
-							<a href="#">Buy Now</a>
-						</li>
-						
-					</ul>
-				</div>
-				<!--TODO: Mobile menu -->
-				<div class="links block lg:hidden w-1/6 lg:w-4/6">
-					<a href="#" id="mobile-menu" class="block text-white hover:text-lime-400 font-bold p-3">Menu</a>
-					<ul class="mobile-links hidden w-full absolute z-50 left-0 text-center bg-gray-800 transition ">
-						<NavItem text="Home"></NavItem>
-						<NavItem text="Play Together"></NavItem>
-						<NavItem text="Explore"></NavItem>
-						<AltBtn text="Bowser Fury"></AltBtn>
-						<li class="block text-white font-bold rounded-full bg-red-600 p-3 hover:bg-white hover:text-black transition duration-500">
-							<a href="#">Buy Now</a>
-						</li>
-						
-					</ul>
-				</div>
-			</nav>
-		</div>
-		<script>
-			const menuButton = document.querySelector("#mobile-menu");
+	<main class="xsm:w-auto w-[1280px] mx-auto">
+		<Header></Header>
+		<section class="header">
+			<img src="img/hero.jpg" alt="">
+		</section>
 
-			menuButton.addEventListener('click',e => {
-				const menu = document.querySelector('.mobile-links');
-				menu.classList.toggle('hidden');
-			});
-		</script>
+		<section>
+			<div class="bg-wave-pattern h-6 bg-repeat-x relative -top-2"></div>
+			<div class="bg-wave-pattern-dots text-center p-4 flex md:flex-row flex-col gap-3 justify-center">
+				<a href="#" class="inline-block py-3 px-16 bg-black text-white font-bold border-transparent border-8 text-2xl rounded-3xl hover:border-gray-200 hover:bg-white hover:text-black transition duration-200">
+					Buy Now</a>
+				<a href="#" class="inline-block py-3 px-16 bg-red-500 text-white font-bold border-transparent border-8 text-2xl rounded-3xl hover:border-gray-200 hover:bg-white hover:text-black transition duration-200">
+					Watch the Trailer</a>	
+			</div>
+			
+			<div class="bg-wave-pattern bg-repeat-x h-6 relative top-2"></div>
+		</section>
+		<section class="bg-red-500 h-6"></section>
 	</main>
 </Layout>
